# olio-ohjelmointi

./: main.cpp
Game1/: CMakeLists.txt  Game.h  game.cpp  main.cpp
Viikkotehtava1/: main.cpp
gurggumobolaskin/: gurggu.qrc  mainwindow.cpp  mainwindow.ui
kotitehtava6/: CMakeLists.txt  main.cpp  student.cpp  student.h
laskin/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikko3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
viikko4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
viikko5/: CMakeLists.txt  Notifikaattori.cpp  Notifikaattori.h  Seuraaja.cpp  Seuraaja.h  main.cpp
