cmake_minimum_required(VERSION 3.16)

project(viikko4 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(viikko4 main.cpp
    pankkitili.h
    pankkitili.cpp
    luottotili.h
    asiakas.h
    luottotili.cpp
    asiakas.cpp)

include(GNUInstallDirs)
install(TARGETS viikko4
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
